# feedr

./: CLAUDE.md  Cargo.toml  README.md  cliff.toml  demo.cast
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  config_cli.rs  config_tui.rs  config_ui.rs  events.rs  feed.rs  keybindings.rs  lib.rs  main.rs  tui.rs  ui.rs
src/ui/: categories.rs  dashboard.rs  detail.rs  feed_items.rs  feed_list.rs  mod.rs  modals.rs  starred.rs  summary.rs  utils.rs
tests/: integration_test.rs
