[package]
name = "feedr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ratatui = "0.23"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
rss = "2.0"
dirs = "5.0"
html2text = "0.6"
open = "3.2"
chrono = "0.4"
