[package]
name = "feedr"
version = "0.1.0"
edition = "2021"
description = "Feedr is a feature-rich terminal-based RSS feed reader written in Rust."
documentation = "https://github.com/bahdotsh/feedr"
homepage = "https://github.com/bahdotsh/feedr"
repository = "https://github.com/bahdotsh/feedr"
keywords = ["rss", "feed-reader", "terminal", "tui", "cli"]
categories = ["command-line-utilities", "text-processing", "web-programming"]
license = "MIT"

[dependencies]
anyhow = "1.0"
ratatui = "0.23"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
rss = "2.0"
dirs = "5.0"
html2text = "0.6"
open = "3.2"
chrono = "0.4"
unicode-width = "0.1.11"
uuid = { version = "1.4", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = true
