[package]
name = "feedr"
version = "0.2.0"
edition = "2021"
description = "Feedr is a feature-rich terminal-based RSS/Atom feed reader written in Rust."
documentation = "https://github.com/bahdotsh/feedr"
homepage = "https://github.com/bahdotsh/feedr"
repository = "https://github.com/bahdotsh/feedr"
keywords = ["rss", "atom", "feed-reader", "terminal", "tui"]
categories = ["command-line-utilities", "text-processing", "web-programming"]
license = "MIT"

[[bin]]
name = "feedr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
ratatui = "0.23"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "gzip", "deflate", "brotli"] }
feed-rs = "2.3"
dirs = "5.0"
html2text = "0.6"
open = "3.2"
chrono = "0.4"
unicode-width = "0.1.11"
uuid = { version = "1.4", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
opml = "1.1.6"
toml = "0.8"

[profile.release]
codegen-units = 1
lto = true
